name:                lang-base
version:             0.1.0.0
synopsis: Various routines that are common when writing programming languages.
-- description:
homepage:            https://github.com/lehmacdj/lang-base#readme
license:             BSD3
license-file:        LICENSE
author:              Devin Lehmacher
maintainer:          lehmacdj@gmail.com
copyright:           Copyright: (c) 2017 Devin Lehmacher
category:            Miscellaneous
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.Common.Variable,
                       Lang.Common.Unique,
                       Lang.Common.AbstractInterpretation,
                       Lang.Common.Evaluate,
                       Lang.Common.Decorated,
                       Lang.Common,
                       Control.Repl,
                       Control.Repl.Bindings
  build-depends:       base >= 4.7 && < 5,
                       mtl, transformers,
                       haskeline,
                       parsec, recursion-schemes
  default-language:    Haskell2010

test-suite lang-base-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lang-base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehmacdj/lang-base
